--- a/browser.html
+++ b/browser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type = "text/less" href="browser.less">
+    <link rel="stylesheet" type = "text/css" href="browser.css">
     <script src="browser.js"></script>
   <body>
     <div id="controls">
