--- a/browser.html
+++ b/browser.html
@@ -13,9 +13,9 @@
 
       <form id="location-form">
         <div id="center-column">
-          <input id="location" type="text" value="http://www.github.com/">
+          <input id="location" type="text" value="http://www.google.com/">
         </div>
-        <input type="submit" value="Go">
+
       </form>
     </div>
 
